syntax = "proto3";

package packet;

enum ProtocolType {
  IPProtocolHopopt = 0;
  IPProtocolIcmp = 1;
  IPProtocolIgmp = 2;
  IPProtocolGgp = 3;
  IPProtocolIpv4 = 4;
  IPProtocolSt = 5;
  IPProtocolTcp = 6;
  IPProtocolCbt = 7;
  IPProtocolEgp = 8;
  IPProtocolIgp = 9;
  IPProtocolBbnRccMon = 10;
  IPProtocolNvpII = 11;
  IPProtocolPup = 12;
  IPProtocolArgus = 13;
  IPProtocolEmcon = 14;
  IPProtocolXnet = 15;
  IPProtocolChaos = 16;
  IPProtocolUdp = 17;
  IPProtocolMux = 18;
  IPProtocolDcnMeas = 19;
  IPProtocolHmp = 20;
  IPProtocolPrm = 21;
  IPProtocolXnsIdp = 22;
  IPProtocolTrunk1 = 23;
  IPProtocolTrunk2 = 24;
  IPProtocolLeaf1 = 25;
  IPProtocolLeaf2 = 26;
  IPProtocolRdp = 27;
  IPProtocolIrtp = 28;
  IPProtocolIsoTp4 = 29;
  IPProtocolNetblt = 30;
  IPProtocolMfeNsp = 31;
  IPProtocolMeritInp = 32;
  IPProtocolDccp = 33;
  IPProtocolThreePc = 34;
  IPProtocolIdpr = 35;
  IPProtocolXtp = 36;
  IPProtocolDdp = 37;
  IPProtocolIdprCmtp = 38;
  IPProtocolTpPlusPlus = 39;
  IPProtocolIl = 40;
  IPProtocolIpv6 = 41;
  IPProtocolSdrp = 42;
  IPProtocolIpv6Route = 43;
  IPProtocolIpv6Frag = 44;
  IPProtocolIdrp = 45;
  IPProtocolRsvp = 46;
  IPProtocolGre = 47;
  IPProtocolDsr = 48;
  IPProtocolBna = 49;
  IPProtocolEsp = 50;
  IPProtocolAh = 51;
  IPProtocolINlsp = 52;
  IPProtocolSwipe = 53;
  IPProtocolNarp = 54;
  IPProtocolMobile = 55;
  IPProtocolTlsp = 56;
  IPProtocolSkip = 57;
  IPProtocolIcmpv6 = 58;
  IPProtocolIpv6NoNxt = 59;
  IPProtocolIpv6Opts = 60;
  IPProtocolHostInternal = 61;
  IPProtocolCftp = 62;
  IPProtocolLocalNetwork = 63;
  IPProtocolSatExpak = 64;
  IPProtocolKryptolan = 65;
  IPProtocolRvd = 66;
  IPProtocolIppc = 67;
  IPProtocolDistributedFs = 68;
  IPProtocolSatMon = 69;
  IPProtocolVisa = 70;
  IPProtocolIpcv = 71;
  IPProtocolCpnx = 72;
  IPProtocolCphb = 73;
  IPProtocolWsn = 74;
  IPProtocolPvp = 75;
  IPProtocolBrSatMon = 76;
  IPProtocolSunNd = 77;
  IPProtocolWbMon = 78;
  IPProtocolWbExpak = 79;
  IPProtocolIsoIp = 80;
  IPProtocolVmtp = 81;
  IPProtocolSecureVmtp = 82;
  IPProtocolVines = 83;
  IPProtocolTtpOrIptm = 84;
  IPProtocolNsfnetIgp = 85;
  IPProtocolDgp = 86;
  IPProtocolTcf = 87;
  IPProtocolEigrp = 88;
  IPProtocolOspfigP = 89;
  IPProtocolSpriteRpc = 90;
  IPProtocolLarp = 91;
  IPProtocolMtp = 92;
  IPProtocolAx25 = 93;
  IPProtocolIpIp = 94;
  IPProtocolMicp = 95;
  IPProtocolSccSp = 96;
  IPProtocolEtherip = 97;
  IPProtocolEncap = 98;
  IPProtocolPrivEncryption = 99;
  IPProtocolGmtp = 100;
  IPProtocolIfmp = 101;
  IPProtocolPnni = 102;
  IPProtocolPim = 103;
  IPProtocolAris = 104;
  IPProtocolScps = 105;
  IPProtocolQnx = 106;
  IPProtocolAN = 107;
  IPProtocolIpComp = 108;
  IPProtocolSnp = 109;
  IPProtocolCompaqPeer = 110;
  IPProtocolIpxInIp = 111;
  IPProtocolVrrp = 112;
  IPProtocolPgm = 113;
  IPProtocolZeroHop = 114;
  IPProtocolL2tp = 115;
  IPProtocolDdx = 116;
  IPProtocolIatp = 117;
  IPProtocolStp = 118;
  IPProtocolSrp = 119;
  IPProtocolUti = 120;
  IPProtocolSmp = 121;
  IPProtocolSm = 122;
  IPProtocolPtp = 123;
  IPProtocolIsisOverIpv4 = 124;
  IPProtocolFire = 125;
  IPProtocolCrtp = 126;
  IPProtocolCrudp = 127;
  IPProtocolSscopmce = 128;
  IPProtocolIplt = 129;
  IPProtocolSps = 130;
  IPProtocolPipe = 131;
  IPProtocolSctp = 132;
  IPProtocolFc = 133;
  IPProtocolRsvpE2eIgnore = 134;
  IPProtocolMobilityHeader = 135;
  IPProtocolUdpLite = 136;
  IPProtocolMplsInIp = 137;
  IPProtocolManet = 138;
  IPProtocolHip = 139;
  IPProtocolShim6 = 140;
  IPProtocolWesp = 141;
  IPProtocolRohc = 142;
  IPProtocolTest1 = 253;
  IPProtocolTest2 = 254;
  IPProtocolUnknown = 255;
}

message L3 {
  bytes src_ip = 1;
  bytes dst_ip = 2;

  uint32 ttl = 3;
  ProtocolType protocol_type = 4;
}